done pokemonStats